--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -60,6 +60,18 @@
                         </tbody>
                     </table>
                 </section>
+                <section>
+                    <h3>IMAGE</h3>
+                    <article>
+                        <div class="explanation-box">
+                            <ul>
+                                <li>sass를 이용함으로 파일명은 통일성있게 작업진행</li>
+                                <li>img-[directory]-[number] (예시: img-table-01.png)</li>
+                            </ul>
+                             
+                        </div>
+                    </article>
+                </section>
             </section>
             <section id="HTML" class="tab-content current">
                 <section>
