--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -1271,6 +1271,64 @@
                         </ul>
                     </div>
                 </article>
+                <article>
+                    <h4>라우터 구현</h4>
+                    <div class="explanation-box">
+                        <ul>
+                            <li>
+                                <div class="vue-17"></div>
+                                <p>라우터를 구현할 페이지를 생성</p>
+                            </li>
+                            <li>
+                                <div class="vue-18"></div>
+                                <p>"import"를 사용하여 해당 페이지를 연결</p>
+                            </li>
+                            <li>
+                                <div class="vue-19"></div>
+                                <p>페이지의 "url" (path)과 해당 url에서 표시될 컴포넌트를 입력 (component)</p>
+                            </li>
+                            <li>
+                                <div class="vue-20"></div>
+                                <p>"export"를 입력하여 "main.js"에서 사용하도록 설정</p>
+                            </li>
+                            <li>
+                                <div class="vue-21"></div>
+                                <p>마지막으로 "main.js"에서 해당 라우터를 "import"하면 끝</p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <h4>리다이렉트</h4>
+                    <div class="explanation-box">
+                        <ul>
+                            <li>
+                                <div class="vue-22"></div>
+                                <p>"index.js"에 리다이렉트 할 경로 입력</p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <h4>라우터 링크 (CLI)</h4>
+                    <div class="explanation-box">
+                        <ul>
+                            <li>
+                                <div class="vue-23"></div>
+                                <p>components 폴더엔에 신규 vue 생성</p>
+                            </li>
+                            <li>
+                                <div class="vue-24"></div>
+                                <p>cdn 방식이랑 같음 ([초급]페이지 참조)</p>
+                            </li>
+                            <li>
+                                <div class="vue-25"></div>
+                                <p>"app.vue"에 해당 vue를 import 한 후 comopnents 함</p>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
         </section>
         <section id="applications" class="tab-content">
             <section>
