--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -33,7 +33,9 @@
                 <article data-tab="CSS">CSS3</article>
             </section>
             <section id="uiux" class="tab-content">
-                준비중
+                <section id="">
+                    <h3>준비중</h3>
+                </section>
             </section>
             <section id="myGuide" class="tab-content">
                 <section id="notationHtml">
