--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -352,7 +352,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>기능 2</th>
+                            <th>기능 2 </th>
                             <td>
                                 <div>
                                     <input type="text" class="firstnum">-
@@ -367,6 +367,39 @@
                     </tbody>
                 </table>
             </article>
+            <h4>애니메이션(Keyframe)</h4>
+            <table class="default-table">
+                <caption class="sr-only">애니메이션(Keyframe)</caption>
+                <colgroup>
+                    <col style="width: 25%" />
+                    <col style="width: 75%" />
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th>기능 1</th>
+                        <td>
+                            <section class="sample-list">
+                                <article>
+                                    <div>이미지1</div>
+                                    <div></div>
+                                </article>
+                                <article>
+                                    <div>이미지2</div>
+                                    <div></div>
+                                </article>
+                                <article>
+                                    <div>이미지3</div>
+                                    <div></div>
+                                </article>
+                                <article>
+                                    <div>이미지4</div>
+                                    <div></div>
+                                </article>
+                            </section>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 
