--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -1441,6 +1441,23 @@
                     </div>
                 </article>
             </section>
+            <section>
+                <h3>Import & Export</h3>
+                <article>
+                    <h4>defaule & const(&let)</h4>
+                    <div class="explanation-box-pre">
+                        <pre>
+                            export <code class="blue">const </code> sample = new Vue();
+
+                            import { sample } from './sample.js';
+
+                            export <code class="red">default</code> new Vue();
+
+                            import sample from './sample.js';
+                        </pre>
+                    </div>
+                </article>
+            </section>
         </section>
         <section id="applications" class="tab-content">
             <section>
