--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -1458,6 +1458,10 @@
                     </div>
                 </article>
             </section>
+            <section>
+                <h3>HOC (higher-order component</h3>
+                <p class="notice"> HOC는 컴포넌트의 로직(코드)을 재사용하기 위한 고급 기술</p>
+            </section>
         </section>
         <section id="applications" class="tab-content">
             <section>
