--- a/guideLine/html/sub/github.html
+++ b/guideLine/html/sub/github.html
@@ -165,6 +165,9 @@
 
                                         // 그리고 재설치
                                         npm install -g @vue/cli
+
+                                        // 제대로 안될 때 [node_modules 삭제]
+                                        npm uninstall node_modules
                                     </pre>
                                 </div>
                             </td>
