--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -1609,6 +1609,20 @@
                     <h4>Common Approach</h4>
                 </article>
             </section>
+            <section>
+                <h3>서비스 배포 환경구성</h3>
+                <article>
+                    <h4>배포 명령어</h4>
+                    <div class="explanation-box">
+                        npm run build
+                    </div>
+                </article>
+                <article>
+                    <h4>Netlify를 이용한 배포 실습</h4>
+                    <div class="explanation-box">
+                        <a href="https://www.netlify.com/">바로가기</a>
+                    </div>
+                </article>
         </section>
     </main>
     <!-- Footer Area-->
